a1/brendan_gordon/TEST_PROGRAMS/invalidtype/eric_ditomasso/doubledec.min
# this script tests declaring a variable twice
var x: int;
var x: float;
var xs: int;
var xa: string;
